Migrate persistent data to queryable stores