@@ -17,9 +17,8 @@
 package com.cloudogu.scm.review.comment.service;
 
 import com.cloudogu.scm.review.TestData;
+import com.cloudogu.scm.review.pullrequest.service.PullRequest;
 import com.cloudogu.scm.review.pullrequest.service.PullRequestStore;
-import com.google.common.collect.ImmutableList;
-import org.assertj.core.util.Lists;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -27,10 +26,10 @@ import org.mockito.junit.jupiter.MockitoExtension;
 import org.mockito.junit.jupiter.MockitoSettings;
 import org.mockito.quality.Strictness;
 import sonia.scm.security.KeyGenerator;
-import sonia.scm.security.UUIDKeyGenerator;
-import sonia.scm.store.DataStore;
-import sonia.scm.store.DataStoreFactory;
-import sonia.scm.store.InMemoryByteDataStoreFactory;
+import sonia.scm.store.QueryableMutableStore;
+import sonia.scm.store.QueryableStore;
+import sonia.scm.store.QueryableStoreExtension;
+import sonia.scm.store.QueryableStoreFactory;
 
 import java.time.Instant;
 import java.time.temporal.ChronoUnit;
@@ -43,75 +42,80 @@ import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
-@ExtendWith(MockitoExtension.class)
+@ExtendWith({MockitoExtension.class, QueryableStoreExtension.class})
 @MockitoSettings(strictness = Strictness.LENIENT)
+@QueryableStoreExtension.QueryableTypes({PullRequest.class, Comment.class})
 class CommentStoreTest {
 
+  private int nextId = 1;
+
   private CommentStore store;
-  private DataStoreFactory dataStoreFactory = new InMemoryByteDataStoreFactory();
-  private DataStore<PullRequestComments> dataStore = dataStoreFactory.withType(PullRequestComments.class).withName("comments").build();
-  private KeyGenerator keyGenerator = new UUIDKeyGenerator();
+  private KeyGenerator keyGenerator = () -> String.valueOf(nextId++);
 
   @BeforeEach
-  void init() {
+  void init(QueryableStoreFactory storeFactory) {
     PullRequestStore prStore = mock(PullRequestStore.class);
     when(prStore.get(any())).thenReturn(TestData.createPullRequest());
-    store = new CommentStore(dataStore, keyGenerator);
+    store = new CommentStore(pullRequestId -> storeFactory.getMutable(Comment.class, "hog", pullRequestId), keyGenerator);
   }
 
   @Test
-  void shouldAddTheFirstComment() {
+  void shouldAddTheFirstComment(QueryableStoreFactory storeFactory) {
     String pullRequestId = "1";
     Comment pullRequestComment = createComment("1", "my Comment", "author", new Location());
 
     store.add(pullRequestId, pullRequestComment);
 
-    assertThat(dataStore.getAll())
-      .hasSize(1)
-      .containsKeys(pullRequestId);
+    try (QueryableStore<Comment> store = storeFactory.getReadOnly(Comment.class, "hog")) {
+      List<QueryableStore.Result<Comment>> all = store.query().withIds().findAll();
+      assertThat(all)
+        .hasSize(1);
+      assertThat(all.get(0).getParentId(PullRequest.class))
+        .contains(pullRequestId);
+    }
   }
 
   @Test
-  void shouldAddCommentToExistingCommentList() {
+  void shouldAddCommentToExistingCommentList(CommentStoreFactory storeFactory) {
     String pullRequestId = "1";
-    Comment oldPRComment = createComment("1", "my comment", "author", new Location());
-    PullRequestComments pullRequestComments = new PullRequestComments();
-    pullRequestComments.setComments(Lists.newArrayList(oldPRComment));
-    dataStore.put(pullRequestId, pullRequestComments);
+    Comment oldPRComment = createComment("0", "my comment", "author", new Location());
+    try (QueryableMutableStore<Comment> store = storeFactory.getMutable("hog", pullRequestId)) {
+      store.put("0", oldPRComment);
+    }
 
-    Comment newPullRequestComment = createComment("2", "my new comment", "author", new Location());
-    store.add(pullRequestId, newPullRequestComment);
+    Comment newPullRequestComment = createComment("0", "my new comment", "author", new Location());
+    this.store.add(pullRequestId, newPullRequestComment);
 
-    List<Comment> comments = dataStore.get(pullRequestId).getComments();
-    assertThat(comments.get(0))
-      .usingRecursiveComparison()
-      .isEqualTo(oldPRComment);
-    assertThat(comments.get(1))
-      .usingRecursiveComparison()
-      .isEqualTo(newPullRequestComment);
+    try (QueryableStore<Comment> store = storeFactory.get("hog", pullRequestId)) {
+      List<Comment> comments = store.query().findAll();
+      assertThat(comments.get(0))
+        .usingRecursiveComparison()
+        .isEqualTo(oldPRComment);
+      assertThat(comments.get(1))
+        .usingRecursiveComparison()
+        .isEqualTo(newPullRequestComment);
+    }
   }
 
   @Test
   void shouldDeleteAnExistingComment() {
-    PullRequestComments pullRequestComments = new PullRequestComments();
-    pullRequestComments.getComments().add(createComment("1", "1. comment", "author", new Location()));
-    pullRequestComments.getComments().add(createComment("2", "2. comment", "author", new Location()));
-    pullRequestComments.getComments().add(createComment("3", "3. comment", "author", new Location()));
     String pullRequestId = "id";
-    dataStore.put(pullRequestId, pullRequestComments);
+    store.add(pullRequestId, createComment("1", "1. comment", "author", new Location()));
+    store.add(pullRequestId, createComment("2", "2. comment", "author", new Location()));
+    store.add(pullRequestId, createComment("3", "3. comment", "author", new Location()));
 
     store.delete(pullRequestId, "2");
 
-    PullRequestComments comments = store.get(pullRequestId);
-    assertThat(comments.getComments())
+    List<Comment> comments = store.getAll(pullRequestId);
+    assertThat(comments)
       .extracting("id")
       .containsExactly("1", "3");
 
     // delete a removed comment has no effect
     store.delete(pullRequestId, "2");
 
-    comments = store.get(pullRequestId);
-    assertThat(comments.getComments())
+    comments = store.getAll(pullRequestId);
+    assertThat(comments)
       .extracting("id")
       .containsExactly("1", "3");
 
@@ -119,28 +123,26 @@ class CommentStoreTest {
 
   @Test
   void shouldUpdateAnExistingComment() {
-    PullRequestComments pullRequestComments = new PullRequestComments();
-    pullRequestComments.getComments().add(createComment("1", "1. comment", "author", new Location()));
-    Comment commentToChange = createComment("2", "2. comment", "author", new Location());
-    pullRequestComments.getComments().add(commentToChange);
-    pullRequestComments.getComments().add(createComment("3", "3. comment", "author", new Location()));
     String pullRequestId = "id";
-    dataStore.put(pullRequestId, pullRequestComments);
+    store.add(pullRequestId, createComment("1", "1. comment", "author", new Location()));
+    Comment commentToChange = createComment("2", "2. comment", "author", new Location());
+    store.add(pullRequestId, commentToChange);
+    store.add(pullRequestId, createComment("3", "3. comment", "author", new Location()));
 
     Comment copy = commentToChange.clone();
     copy.setComment("new text");
     store.update(pullRequestId, copy);
 
-    PullRequestComments comments = store.get(pullRequestId);
-    assertThat(comments.getComments().stream().filter(c -> "2".equals(c.getId())))
+    List<Comment> comments = store.getAll(pullRequestId);
+    assertThat(comments.stream().filter(c -> "2".equals(c.getId())))
       .extracting("comment")
       .containsExactly("new text");
 
     // delete a removed comment has no effect
     store.delete(pullRequestId, "2");
 
-    comments = store.get(pullRequestId);
-    assertThat(comments.getComments())
+    comments = store.getAll(pullRequestId);
+    assertThat(comments)
       .extracting("id")
       .containsExactly("1", "3");
 
@@ -148,32 +150,31 @@ class CommentStoreTest {
 
   @Test
   void shouldGetPullRequestComments() {
-    PullRequestComments pullRequestComments = new PullRequestComments();
-    pullRequestComments.getComments().add(createComment("1", "1. comment", "author", new Location()));
-    pullRequestComments.getComments().add(createComment("2", "2. comment", "author", new Location()));
-    pullRequestComments.getComments().add(createComment("3", "3. comment", "author", new Location()));
     String pullRequestId = "id";
-    dataStore.put(pullRequestId, pullRequestComments);
+    store.add(pullRequestId, createComment("1", "1. comment", "author", new Location()));
+    store.add(pullRequestId, createComment("2", "2. comment", "author", new Location()));
+    store.add(pullRequestId, createComment("3", "3. comment", "author", new Location()));
 
-    PullRequestComments comments = store.get(pullRequestId);
-    assertThat(comments.getComments())
+    List<Comment> comments = store.getAll(pullRequestId);
+    assertThat(comments)
       .extracting("id")
       .containsExactly("1", "2", "3");
   }
 
   @Test
   void shouldCreateNewStoreIfStoreIsMissing() {
-    PullRequestComments newStore = store.get("iDontExist");
+    List<Comment> newStore = store.getAll("iDontExist");
 
-    assertThat(newStore).isNotNull();
-    assertThat(newStore.getComments()).isEmpty();
+    assertThat(newStore)
+      .isNotNull()
+      .isEmpty();
   }
 
   @Test
   void shouldCreateNewCommentWithInlineContext() {
     String pullRequestId = "1";
     Comment comment = createComment("1", "1. comment", "author", new Location("file.txt", "123", null, 3));
-    comment.setContext(new InlineContext(ImmutableList.of(
+    comment.setContext(new InlineContext(List.of(
       copy(new MockedDiffLine.Builder().newLineNumber(1).get()),
       copy(new MockedDiffLine.Builder().newLineNumber(2).get()),
       copy(new MockedDiffLine.Builder().newLineNumber(3).get())
@@ -181,7 +182,7 @@ class CommentStoreTest {
 
     store.add(pullRequestId, comment);
 
-    Comment storedComment = dataStore.get(pullRequestId).getComments().get(0);
+    Comment storedComment = store.getAll(pullRequestId).get(0);
     assertThat(storedComment).usingRecursiveComparison().isEqualTo(comment);
     assertThat(storedComment.getContext().getLines()).hasSize(3);
   }
@@ -192,9 +193,10 @@ class CommentStoreTest {
     Comment comment = Comment.createSystemComment("system", Map.of("ship", "Heart of Gold", "captain", "Zaphod Beeblebrox"));
     comment.setDate(Instant.now().truncatedTo(ChronoUnit.SECONDS)); // we have to truncate this because the date is serialized to xml and the xml adapter does not support nanoseconds
 
-    store.add(pullRequestId, comment);
+    String newId = store.add(pullRequestId, comment);
+    comment.setId(newId);
 
-    Comment storedComment = dataStore.get(pullRequestId).getComments().get(0);
+    Comment storedComment = store.getAll(pullRequestId).get(0);
     assertThat(storedComment).usingRecursiveComparison().isEqualTo(comment);
   }
 
